fix: gradient bleed out

--- a/src/components/PageContainer/PageContainer.module.css
+++ b/src/components/PageContainer/PageContainer.module.css
@@ -1,7 +1,7 @@
 .leftBorderGradient {
   background-image: linear-gradient(
     to bottom,
-    theme('colors.blue.36') 0%,
+    theme('colors.blue.36') -20%,
     theme('colors.yellow.59') 120%
   );
 }
@@ -9,7 +9,7 @@
 .rightBorderGradient {
   background-image: linear-gradient(
     to bottom,
-    theme('colors.yellow.59') 0%,
+    theme('colors.yellow.59') -20%,
     theme('colors.blue.36') 120%
   );
 }
